# indexAnalyzer

./: .gitignore  Cargo.toml  README.md  RULES.md  WORKFLOW.md  bugfix-log.txt  code_indexer.py  promopt.md
.windsurf/: tasks.md
docs/: README.md  configuration.md  dependency_setup.md  migration.md  roadmap.md  roadmap_part1.md  roadmap_part2.md  roadmap_part3.md  vector_implementation_status.md
src/: ast_parser.rs  batch_processing.rs  cli.rs  config.rs  embedder.rs  error.rs  extract_entities.rs  file_processing.rs  lib.rs  logging.rs  main.rs  output_format.rs  redis_ops.rs  vector_search.rs  vector_store.rs  vectorize.rs
test_indexer/: Cargo.toml
test_indexer/src/: main.rs
tests/: batch_processing.rs  classic_vector_isolation.rs  cli_vector_recall.rs  cli_vectorize.rs  config_enhanced.rs  config_enhanced_system.rs  coverage_tracking.rs  doc_cli_update.rs  embedder_extreme.rs  embedder_logging.rs  embedder_openai_hf.rs  embedder_trait.rs  embedding_generation.rs  entity_embedding.rs  entity_extraction.rs  integration.rs  migration_instructions.rs  output_formatting.rs  provider_selection.rs  query_logging.rs  similarity_search.rs  vector_batch_processing.rs  vector_entity_extraction.rs  vector_indexing.rs  vector_query_extreme.rs  vector_recall.rs  vector_similarity_search.rs  vector_store_extreme.rs  vector_store_logging.rs  vector_store_mock.rs  vector_store_redis.rs  vector_store_trait.rs  vectorize_command.rs  vectorize_command_advanced.rs  vectorize_command_edge_cases.rs  vectorize_command_extreme.rs  vectorize_logic.rs
utils/: compile_rules_workflow_to_json.py
(+53 files in other folders)
