[package]
name = "code_indexer_rust"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.37", features = ["full"] }
fred = { version = "10.0.0", features = ["serde_json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
ignore = "0.4"
rustpython-ast = "0.4.0"
log = "0.4"
fern = "0.6"
once_cell = "1.19"
dirs-next = "2.0"
clap = { version = "4.5", features = ["derive"] }
thiserror = "1.0"
