[package]
name = "test_indexer"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.37", features = ["full"] }
fred = { version = "10.1.0", features = ["serde-json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ignore = "0.4"
tempfile = "3.10"
chrono = "0.4"
